--- a/BookChain/BookChain/templates/login.html
+++ b/BookChain/BookChain/templates/login.html
@@ -12,6 +12,8 @@
 </div>
 <div id="middlebox">
     <div class="container">
+        <h2 class="title">Iniciar Sesion</h2>
+
         <form method="post" action="" class="form-signin">
             {{ login_form.hidden_tag() }}
             <img class="mb-4"
