--- a/BookChain/BookChain/static/content/mystyles.css
+++ b/BookChain/BookChain/static/content/mystyles.css
@@ -2,6 +2,8 @@ html,
 body {
 	height: 100%;
 	width: 100%;
+	background-color: #eee;
+	font-family: 'Roboto' , sans-serif;
 }
 body {
 	-ms-flex-align: center;
@@ -11,11 +13,12 @@ body {
 	-webkit-box-pack: center;
 	justify-content: center;
 	padding-bottom: 40px;
-	background-color: #f5f5f5;
+	background-color: #eee !important;
 }
 
 .form-signin {
 	width: 100%;
+	height:100%;
 	max-width: 330px;
 	padding: 15px;
 	margin: 0 auto;
@@ -44,24 +47,35 @@ body {
 	border-top-left-radius: 0;
 	border-top-right-radius: 0;
 }
-.title {
-	font-family :'Segoe UI'
-}
+
 #search-box.container {
 	width: 50%;
-	padding-bottom : 10px;
+	padding-bottom: 10px;
 	padding-top: 10px;
+}
+#search {
+	/*box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);*/
 }
 .card-body {
 	border-top: 1px solid;
 	border-top-color: darkgrey;
 }
 .card {
-	border:2px solid rgba(0,0,0,.125);
+	border: 2px solid rgba(0,0,0,.125);
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.card:hover {
+	-ms-transform: scale(1.05); /* IE 9 */
+	-webkit-transform: scale(1.05); /* Safari 3-8 */
+	transform: scale(1.05);
 }
 .navbar {
-	border-bottom: 1px solid #0062cc3d;
+	/*border-bottom: 1px solid #0062cc3d;*/
+	background-color: white;
+	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
+	margin-bottom: 4px;
 }
+
 .nav-states ul {
 	list-style: none;
 	margin: 0;
@@ -106,29 +120,51 @@ body {
 }
 #middlebox {
 	float: left;
-	/*background: Green*/;
-	width: 62%;
+	background-color: white;
+	width:75%;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	border-radius: 4px;
+	box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2), 0 1.5px 5px 0 rgba(0, 0, 0, 0.19);
+	;
 	/*height: 280px;*/
 }
 #leftbox {
 	float: left;
 	/*background: Red*/;
-	width: 19%;
+	width: 12.5%;
 	/*height: 280px;*/
 }
+/*
 #footer {
 	clear: both;
 	position: relative;
+	
 	height: 100px;
+	background-color: white;
 	margin-top: -200px;
-}
+}*/
 #left-filter {
-	padding-top: 70%;
-	padding-left: 20%;
+	padding-top: 45%;
+	padding-left: 15%;
 }
 #filter-title {
 	border-left: 4px solid #0062cc3d;
 }
 #filter-title h4{
 	margin-left : 2px;
+}
+.main-container {
+	min-height: 100vh; /* will cover the 100% of viewport */
+	overflow: hidden;
+	display: block;
+	position: relative;
+	padding-bottom: 200px; /* height of your footer */
+}
+
+footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+	border-top: 1px solid #1d212426;
 }
