--- a/BookChain/BookChain/static/content/mystyles.css
+++ b/BookChain/BookChain/static/content/mystyles.css
@@ -152,7 +152,7 @@ body {
 	border-left: 4px solid #0062cc3d;
 }
 #filter-title h4{
-	margin-left : 2px;
+	margin-left : 4px;
 }
 .main-container {
 	min-height: 100vh; /* will cover the 100% of viewport */
@@ -166,5 +166,7 @@ footer {
 	position: absolute;
 	bottom: 0;
 	width: 100%;
+	color: white;
 	border-top: 1px solid #1d212426;
+	background: rgb(51,51,51);
 }
