--- a/BookChain/BookChain/static/content/mystyles.css
+++ b/BookChain/BookChain/static/content/mystyles.css
@@ -15,7 +15,11 @@ body {
 	padding-bottom: 40px;
 	background-color: #eee !important;
 }
-
+.modal-content {
+	width: 100%;
+	min-width: 320px;
+	height: auto;
+}
 .form-signin {
 	width: 100%;
 	height:100%;
@@ -49,7 +53,7 @@ body {
 }
 
 #search-box.container {
-	width: 50%;
+	width: 40%;
 	padding-bottom: 10px;
 	padding-top: 10px;
 }
@@ -62,7 +66,15 @@ body {
 }
 .card {
 	border: 2px solid rgba(0,0,0,.125);
+	max-width:250px;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+}
+.card-img-top {
+	width:100%;
+	height:auto;
+}
+.btn {
+	margin: 2px 0px;
 }
 .card:hover {
 	-ms-transform: scale(1.05); /* IE 9 */
@@ -71,7 +83,7 @@ body {
 }
 .navbar {
 	/*border-bottom: 1px solid #0062cc3d;*/
-	background-color: white;
+	
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2);
 	margin-bottom: 4px;
 }
@@ -154,6 +166,9 @@ body {
 #filter-title h4{
 	margin-left : 4px;
 }
+#left-filter a {
+	color: rgba(0,0,0,.5);
+}
 .main-container {
 	min-height: 100vh; /* will cover the 100% of viewport */
 	overflow: hidden;
@@ -170,3 +185,19 @@ footer {
 	border-top: 1px solid #1d212426;
 	background: rgb(51,51,51);
 }
+
+.form-control:focus {
+	box-shadow: none;
+}
+
+.form-control-underlined {
+	border-width: 0;
+	border-bottom-width: 1px;
+	width:350px !important;
+	border-radius: 0;
+	padding-left: 0;
+}
+
+
+            
+            
