--- a/BookChain/BookChain/templates/index.html
+++ b/BookChain/BookChain/templates/index.html
@@ -17,10 +17,11 @@
     </div>
     <div class="container" id="search-box">
 
-        <form action="#" onsubmit="handle" method="post">
+        <!-- Search form -->
+        <form class="form-inline d-flex justify-content-center md-form form-sm active-cyan-2 mt-2" action="#" onsubmit="handle" method="post">
             {{search_box_form.hidden_tag() }}
-            {{search_box_form.search(class='form-control',**{'placeholder':'Busqueda'})}}
-
+            {{search_box_form.search(class='form-control form-control-underlined',**{'placeholder':'Busqueda'})}}
+            
         </form>
 
     </div>
